Fix lint
* add final keywords on class
* use getLast
* use record